force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/leaseworks__Assembly_RC_Info__c.object-meta.xml
<CustomObject>
    <description>Reporting only. Individual components or assemblies listed in this table should be associated with a corresponding Delivery/Return Conditions record. This helps users to capture the required remaining life or since last event.
[MODULE: Contract]
[LOAD: Optional]
[PREREQUISITES: Delivery/Return Conditions]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Delivery/Return Condition Life</label>
    <nameField>
        <label>Delivery/Return Condition Life Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery/Return Conditions Life</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>