force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/Comments_Local__c.field-meta.xml
<CustomField>
    <fullName>Comments_Local__c</fullName>
    <description>This was added at the time of Implementation</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>