force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>