force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/leaseworks__RC_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RC_FC__c</fullName>
    <description>Flight Cycles remaining to or Since the Event minimum life, will be ignored if Use % instead is checked</description>
    <inlineHelpText>Flight Cycles remaining to or Since the Event minimum life, will be ignored if Use % instead is checked</inlineHelpText>
    <label>Life FC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>