force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/leaseworks__RC_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RC_Months__c</fullName>
    <description>Months remaining to or Since the Event minimum life, will be ignored if Use % instead is checked</description>
    <inlineHelpText>Months remaining to or Since the Event minimum life, will be ignored if Use % instead is checked</inlineHelpText>
    <label>Life Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>