force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/leaseworks__RC_Months_Per__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RC_Months_Per__c</fullName>
    <description>Return condition on Month calculated as a % depending on the Applicability field and used for EOL, compensation and Forecast</description>
    <inlineHelpText>Months % of the interval remaining to or Since the Event minimum life, Use % instead should be checked to use this field</inlineHelpText>
    <label>Life Months %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>