force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/leaseworks__Return_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Return_Condition_Type__c</fullName>
    <description>Information field to keep Return Condition type</description>
    <inlineHelpText>Full Life/Half Life option for information only. No impact on the calculation</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Half Life</fullName>
            </value>
            <value>
                <fullName>Full Life</fullName>
                <default>true</default>
                <label>Full Life</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>