force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/fields/Serviceable_Only_Local__c.field-meta.xml
<CustomField>
    <fullName>Serviceable_Only_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this was added at the time of Implementation</description>
    <label>Serviceable Only</label>
    <type>Checkbox</type>
</CustomField>