force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/validationRules/leaseworks__PercentageTick.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PercentageTick</fullName>
    <active>false</active>
    <errorConditionFormula>and (leaseworks__Return_Percentage__c ,   isBlank( leaseworks__RC_FC_Per__c) ,
isBlank( leaseworks__RC_FH_Per__c),isBlank( leaseworks__RC_Months_Per__c))</errorConditionFormula>
    <errorMessage>Please enter return percentage value for FH, FC and Months.</errorMessage>
</ValidationRule>