force-app/main/default/objects/leaseworks__Assembly_RC_Info__c/validationRules/leaseworks__PercentageUnTick.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PercentageUnTick</fullName>
    <active>false</active>
    <errorConditionFormula>and (!leaseworks__Return_Percentage__c ,   isBlank( leaseworks__RC_FC__c) ,
isBlank( leaseworks__RC_FH__c),isBlank( leaseworks__RC_Months__c))</errorConditionFormula>
    <errorMessage>Please enter return number value for FH, FC and Months.</errorMessage>
</ValidationRule>